--- a/locales/de/index.yml
+++ b/locales/de/index.yml
@@ -781,6 +781,7 @@ email:
     title: "Bestätige deine E-Mail-Adresse"
     subtitle: "Folge den Anweisungen, die an folgende Adresse gesendet wurden:"
     link: "Ist sie nicht korrekt?"
+    countdowntext: "Eine neue E-Mail anfordern in "
     buttonlabelsent: "E-Mail gesendet"
     buttonlabelsentagain: "E-Mail erneut senden"
     toast: "Erledigt! Prüf deinen Posteingang."
