--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2658,6 +2658,7 @@ features:
     payments:
       title: "pagoPA notices"
       noticeCode: "Notice code"
+      pay: "Pay"
   euCovidCertificate:
     save:
       album: "IO"
