--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -1932,12 +1932,18 @@ messageDetails:
     title: "Cos'è un messaggio dinamico?"
     body: "È un messaggio che l'ente può modificare dopo averlo inviato. In questo modo, le informazioni che contiene saranno sempre corrette.\n\nUn ente può modificare le informazioni di un messaggio dinamico solo in casi specifici, per esempio per cambiare un'informazione vecchia o aggiornare un allegato non più valido.\n\nSe deve comunicarti nuove informazioni o aggiornamenti importanti, ti invierà un nuovo messaggio."
   footer:
-    contact: "Contatta il mittente"
+    contacts: "Contatta il mittente"
     showMoreData: "Mostra altri dati"
   showMoreDataBottomSheet:
     title: "Dati identificativi"
     messageId: "ID messaggio"
     messageIdAccessibility: "ID messaggio, copia"
+  contactsBottomSheet:
+    title: "Assistenza"
+    body: "Se non ti è chiaro il contenuto del messaggio, contatta l’ente che te lo ha inviato."
+    actions:
+      call: Fai una chiamata
+      email: Scrivi un'email
 messagePDFPreview:
   title: "Anteprima PDF"
   singleBtn: "Salva o condividi"
