--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -789,17 +789,18 @@ email:
   newinsert:
     header: Configura IO
     title: Qual è la tua email?
-    subtitle: Utilizziamo l’email per alcune comunicazioni, come le ricevute di pagamento o i messaggi scambiati con l’assistenza.
+    subtitle: Servirà a inviarti comunicazioni come ricevute di pagamento o messaggi di assistenza.
     label: Indirizzo email personale
     alert:
-      title: L’email {{email}} associata alla tua identità SPID è già in uso su IO, inseriscine una diversa.
-      description: "email già in uso"
-      modaltitle: "Questa email è già in uso"
-      modaldescription: "Può succedere se condividi lo stesso indirizzo con un familiare"
-      modalbutton: "Usa un’altra email"
+      title: "{{email}} è già in uso, inseriscine un’altra."
+      description: email già in uso 
+      invalidemail: Inserisci un indirizzo email valido 
+      modaltitle: Questa email è già in uso
+      modaldescription: Può succedere se condividi lo stesso indirizzo con un familiare
+      modalbutton: Usa un’altra email
   edit:
     title: Modifica la tua email
-    subtitle: L'email che avevi inserito in precedenza è
+    subtitle: Ora stai usando 
     validated: L'email che avevi inserito e validato in precedenza è
     label: Nuovo indirizzo email personale
     cta: Modifica email
