--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2885,6 +2885,10 @@ features:
     home:
       emptyMessage: Custodisci qui i tuoi metodi di pagamento, Carta Giovani Nazionale, bonus e sconti.
       cta: Aggiungi al portafoglio
+      paymentsBanner:
+        title: Vuoi pagare un avviso?
+        action: Vai alla sezione Pagamenti
+        close: Chiudi
 webView:
   error:
     missingParams: Non sono presenti le informazioni necessarie per accedere a questa pagina
