--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -829,7 +829,7 @@ email:
     countdowntext: Richiedi una nuova email tra 
     buttonlabelsent: Email inviata!
     buttonlabelsentagain: Invia di nuovo l’email
-    toast: Fatto! Controlla tua casella di posta.
+    toast: Fatto! Controlla la tua casella di posta.
   newvalidemail:
     title: Email confermata!
     subtitle: Riceverai le comunicazioni di IO all’indirizzo
