--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2071,16 +2071,21 @@ serviceDetail:
   disabled: disabled
   notValidated: To enable the email forwarding you must validate your email address.
 identification:
+  instructions:
+      unlockCode: codice di sblocco
+      unlockCodepPrefix: inserisci il
+      fingerprint: impronta
+      fingerprintPrefix: usa l'
+      faceId: volto
+      faceIdPrefix: usa il
+      congiunction: o
   title: Hi {{name}}!
   titleProfileName: Hi {{profileName}}!
   titleValidation: Confirm the procedure
   logout: Logout
   logoutProfileName: Not {{profileName}}?
   logoutDescription: You can login with your SPID or CIE credentials. This session will be disconnected.
-  logoutDescriptionProfileName: You can login with your SPID or CIE credentials. {{profileName}}'s session will be disconnected.
-  subtitleCode: Enter the unlock code
-  subtitleCodeFingerprint: use the fingerprint or the unlock code
-  subtitleCodeFaceId: use the Face ID or enter the unlock code
+  logoutDescriptionProfileName: You can login with your SPID or CIE credentials. {{profileName}}'s session will be disconnected.  
   biometric:
     fingerprintType: Fingerprint
     title: Biometric identification
