--- a/locales/it/index.yml
+++ b/locales/it/index.yml
@@ -2667,6 +2667,7 @@ features:
     payments:
       title: "Avvisi pagoPA"
       noticeCode: "Codice avviso"
+      pay: "Paga"
   euCovidCertificate:
     save:
       album: "IO"
