feat: [IOPID-1511] [IOPID-1529] Add new DS in Services Preference Screen (Profile and Onboarding) (#5544)
## Short description
Integrate new DS in preference selection screens (onboarding and
profile) and refactor code

## List of changes proposed in this pull request
- Add new DS in Onboarding Services Preference Screen
- Add new DS in Profile Services Preference Screen
- Refactor code
- Change logic (add success banner, change logic to close bottomsheet
and navigate)
- Add the example of the feature added to the radio button in [this
PR](https://github.com/pagopa/io-app-design-system/pull/199) in DS
examples section

> [!TIP]
> [![Run e2e
tests](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml/badge.svg?branch=IOPID-1511-ds-onboarding-service-configuration)](https://github.com/pagopa/io-app/actions/workflows/test-e2e.yml)


_**NB: in these videos I am using Proxyman to simulate error cases**_
<p>

| ❌ AS-IS ❌ | ✅ NEW ✅ | 
| - | - |
| <video
src="https://github.com/pagopa/io-app/assets/83651704/129b84b2-b71f-412a-aa03-485cfe4f9656"
/> | <video
src="https://github.com/pagopa/io-app/assets/83651704/10b56517-52ee-4c73-8980-a85797fcd5d5"
/> |
</p>

**ACCESSIBILITY**

<p>

| 🍏 A11Y iOS 🍏 | 🤖 A11Y Android 🤖 |
| - | - |
| <video
src="https://github.com/pagopa/io-app/assets/83651704/c996e0b6-cd2b-405b-9b53-6967d4ccd274"
/> | <video
src="https://github.com/pagopa/io-app/assets/83651704/63d6eca4-efc9-4eb6-8337-cce0dd8e0e19"/>
|
</p>

## How to test
Run the application as First Onboarding to see the services preference
selection screen and after first login navigate in profile section to
change the services preferences.

_**NB:** I have already considered merging the screens by managing the
logic to have different views in onboarding and in profile, but in my
opinion it is more effective to keep them separate, even for future
changes. We have already merged two almost identical screens in the case
of email ed

--- a/locales/en/index.yml
+++ b/locales/en/index.yml
@@ -2006,6 +2006,7 @@ services:
         value: "Quick setup"
         label: "all the services you didn't disable can contact you."
         title: "Use quick setup"
+        successAlert: "You have enabled the quick setup"
         body:
           text1: "You'll receive messages only by the institutions which have something important to tell you."
           text2: "You can always deactivate communications by services that do not interest you."
@@ -2013,6 +2014,7 @@ services:
         value: "Manual setup"
         label: "only the services you enabled can contact you."
         title: "Configure manually"
+        successAlert: "You have enabled the manual configuration"
         body:
           text1: "No one will contact you. To receive messages, you will have to enable services one by one."
         bottomSheet:
